test/files/neg/t10678.scala
//> using options -deprecation -Xfatal-warnings
//

trait T

trait U <: T

class C <: T {
}

object O <: T {
}
