test/files/neg/t10678.check
t10678.scala:7: error: ';' expected but '<:' found.
class C <: T {
        ^
t10678.scala:10: error: ';' expected but '<:' found.
object O <: T {
         ^
t10678.scala:5: warning: Using `<:` for `extends` is deprecated
trait U <: T
        ^
one warning found
two errors found
